--- a/app/Procfile
+++ b/app/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn djangopj.wsgi --preload --log-level debug --timeout 60
+web: gunicorn app.wsgi --preload --log-level debug --timeout 60
