--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 Django==3.1
 mysqlclient
-sqlalchemy
+# sqlalchemy
 whitenoise
-pandas
+# pandas
 dj-database-url
 django-heroku
 gunicorn
-unidic-lite
-pysummarization
-wordcloud
-matplotlib
-line-bot-sdk
+# unidic-lite
+# pysummarization
+# wordcloud
+# matplotlib
+# line-bot-sdk
